minor alignment issues

--- a/client/stylesheets/base/_players.scss
+++ b/client/stylesheets/base/_players.scss
@@ -8,6 +8,9 @@
         display: inline-block;
         vertical-align: middle;
       }
+      button{
+        margin-bottom: 1.5em + .25em;
+      }
     }/* end lineup */
     .add_player{
       width: 80%;
